--- a/src/diseases/infectious/feline-panleukopenia.html
+++ b/src/diseases/infectious/feline-panleukopenia.html
@@ -1,5 +1,8 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Панлевкопения при котките"></include>
+<include what="@@layout/header.html" 
+         var:title="Панлевкопения при котките: Експертен Съвет от Ветеринар" 
+         var:meta_desc="Загрижени сте за котката си? Научете какво представлява панлевкопенията, как се лекува (флуди, серуми, хранителна подкрепа) и кои са критичните симптоми, които трябва да разпознаете веднага. Пълно ръководство от дипломиран ветеринарен лекар.">
+</include>
 <include what="@@layout/menu.html"></include>
 
 <section id="content-section">
@@ -14,7 +17,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Панлевкопения при котките</h1>
+                    <h1>Панлевкопения при котките: Симптоми, Лечение и Предотвратяване. Експертен Съвет от Ветеринар.</h1>
                     <h2>Какво е панлевкопения и какво я причинява?</h2>
                     <p>Панлевкопенията е заболяване по котките, което се причинява от вирус, нар. Feline Panleukopenia
                         Virus (FPV). Вирусът атакува червата и костния мозък. Вирусът е изключително устойчив и може да
@@ -130,7 +133,58 @@
                         <li><strong>Пробиотици</strong>: За възстановяване на чревната микрофлора.</li>
                         <li><strong>Хиперимунен серум</strong>: На пазара има химеримунни серуми, които водят до пасивен
                             имунитет на котката, на която се прилага.</li>
+                        <li><strong>Кръвопреливане</strong>: Често усложнение на котешката чума е анемията, тъй като вирусът не само потиска производството на кръвни клетки от косния мозък, но и често причинява кървава диария, което води до загуба на кръв.</li>
                     </ul>
+
+                    <h2>Иновативно Лечение: Хиперимунни Серуми при Панлевкопения и лечението с имуномодулатори</h2>
+                    <p>Макар че не съществува специфично антивирусно лекарство за панлевкопения, модерната ветеринарна медицина използва хиперимунни серуми. Те представляват пасивен имунитет – готови антитела, извлечени от кръвта на други животни, които вече са били имунизирани или са преболедували, и се инжектират на болното животно, за да му помогнат да се пребори с вируса. Освен тях, навлизат и имуностимулаторите - вещества, които активизират имунната система на животните да преборят вируса на котешката чума.</p>
+                    <p><strong>⚠️ Важно: </strong> Към момента на писане на тази статия, много от тези специализирани серуми (включително някои, споменати по-долу) не са законно регистрирани, разрешени за употреба или внасяни в Република България. Аз, като ветеринарен лекар, предоставям тази информация единствено с образователна цел, за да информирам стопаните за световните практики в лечението.</p>
+                    <div class="img-holder">
+                        <img src="./img/diseases/infectious/panleukopenia4.png">
+                    </div>
+
+                    <table> ХИПЕРИМУННЕН СЕРУМ
+                        <tr>
+                            <th>Име</th>
+                            <th>Състав</th>
+                            <th>Действие</th>
+                        </tr>
+                        <tr>
+                            <th>Глобфел (Globfel)</th>
+                            <th>Произход: Русия. Състав: Пречистени, концентрирани инактивирани антитела (имуноглобулини) срещу вирусите на панлевкопенията, ринотрахеита и хламидията.</th>
+                            <th>Осигурява пасивен имунитет, който започва веднага и продължава около две седмици. Приложение: Използва се както с лечебна, така и с профилактична цел (напр. при котенца с неясен имунен статус).</th>
+                        </tr>
+                    </table>
+
+                    <table>ИМУНОМОДУЛАТОРИ
+                        <tr>
+                            <th>Име</th>
+                            <th>Състав</th>
+                            <th>Действие</th>
+                        </tr>
+                        <tr>
+                            <th>Фелиферон</th>
+                            <th>Произход: Русия. Състав: Рекомбинантен котешки (или кучешки) Интерферон.</th>
+                            <th>Действие: Интерфероните са протеини, които помагат на клетките да се защитят от вируси. Използват се за засилване на антивирусната защита, модулиране на имунния отговор и намаляване на възпалението. Използват се широко като поддържащо лечение.</th>
+                        </tr>
+                        <tr>
+                            <th>Фоспренил (Fosprenil)</th>
+                            <th>Полипреноли, извлечени от иглолистни дървета.</th>
+                            <th>Стимулира неспецифичния имунен отговор. Подпомага клетъчния имунитет. Използва се като част от комплексната терапия при вирусни инфекции.</th>
+                        </tr>
+                        <tr>
+                            <th>Анандин (Anandin)</th>
+                            <th>Синтетичен нискомолекулен имуномодулатор.</th>
+                            <th>Има противовъзпалително, имуномодулиращо и, според някои проучвания, антивирусно действие. Прилага се като част от протокола за лечение на вирусни инфекции.</th>
+                        </tr>
+                        <tr>
+                            <th>Гамавит (Gamavit)</th>
+                            <th>Комплекс от витамини, аминокиселини и микроелементи (включително плацента денатурирана).</th>
+                            <th>Не е насочен директно срещу вируса. Използва се за общо подсилване на организма, детоксикация, нормализиране на кръвната картина и поддържане на енергийния метаболизъм при изтощени и болни животни.</th>
+                        </tr>
+                        
+                    </table>
+                    <p>Алтернатива на готовите серуми са серумите, извлечени от вече имунизирани срещу котешката чума котки. Както правилно отбелязах, в случаите, когато официален серум не е наличен, някои ветеринарни лекари практикуват извличане на серум. Това включва вземане на кръв от котка, която наскоро е била напълно и успешно ваксинирана или е преболедувала (и има висок титър антитела), и използване на пречистената серумна част за преливане на активно болното животно. Този метод е интензивен, не е стандартизиран и се прилага само в тежки случаи, когато ползите надвишават рисковете, и има нужда от бързо, но пасивно въвеждане на антитела.</p>
 
                     <h2>Как да предотвратим панлевкопенията?</h2>
                     <p>Предотвратяването на панлевкопенията е много по-лесно от лечението ѝ. Ето как да защитите Вашата
@@ -167,13 +221,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="./diseases-rabies.html">
+                        <a href="./diseases-infectious-rabies.html">
                             <div class="other-article-prev">
                                 &laquo; Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./diseases-feline-coronavirus-infection.html">
+                        <a href="./diseases-infectious-feline-coronavirus-infection.html">
                             <div class="other-article-next">
                                 Следваща статия &raquo;
                             </div>
