Cat Pet years calculator revision

--- a/src/growth/cat/pet-years.html
+++ b/src/growth/cat/pet-years.html
@@ -1,4 +1,6 @@
-<include what="@@layout/header.html" var:title="Изчисляване на възрастта в котешки години"></include>
+<include what="@@layout/header.html" 
+var:title="Изчисляване на възрастта в котешки години"
+var:meta_desc="Искате да знаете реалната възраст на котката си? Използвайте нашия точен калкулатор, базирана на ветеринарни изследвания, за бързо пресмятане на котешките години."></include>
 <include what="@@layout/menu.html">
     <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
     <span class="breadcrumb-link">  &#x27A4;  </span>
@@ -24,7 +26,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Изчисляване на възрастта в „котешки години“</h1>
+                    <h1>Калкулатор: Колко са котешките години на Вашата котка? Точна Таблица от Ветеринар</h1>
                     <p>
                         Разпространена заблуда е че една човешка година се равнява на седем котешки години.
                         <br>
