--- a/growth-cat-pet-years.html
+++ b/growth-cat-pet-years.html
@@ -4,7 +4,7 @@
     <meta name="google-site-verification" content="CUyrudPG3hhNckXtwoLpTaaPyyLRSI3Be_YnANvpNxE">
     <title>Муцуна | Изчисляване на възрастта в котешки години</title>
 
-    <meta name="description" content="{{{meta_desc}}}">
+    <meta name="description" content="Искате да знаете реалната възраст на котката си? Използвайте нашия точен калкулатор, базирана на ветеринарни изследвания, за бързо пресмятане на котешките години.">
     
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./calculator-compare-foods.css">
@@ -714,7 +714,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Изчисляване на възрастта в „котешки години“</h1>
+                    <h1>Калкулатор: Колко са котешките години на Вашата котка? Точна Таблица от Ветеринар</h1>
                     <p>
                         Разпространена заблуда е че една човешка година се равнява на седем котешки години.
                         <br>
