Pet years revision

--- a/src/growth/cat/pet-years.html
+++ b/src/growth/cat/pet-years.html
@@ -1,5 +1,5 @@
 <include what="@@layout/header.html" 
-var:title="Изчисляване на възрастта в котешки години"
+var:title="Калкулатор: Колко са котешките години на Вашата котка? Точна Таблица от Ветеринар"
 var:meta_desc="Искате да знаете реалната възраст на котката си? Използвайте нашия точен калкулатор, базирана на ветеринарни изследвания, за бързо пресмятане на котешките години."></include>
 <include what="@@layout/menu.html">
     <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
