--- a/src/growth/dog/pet-years.html
+++ b/src/growth/dog/pet-years.html
@@ -1,4 +1,6 @@
-<include what="@@layout/header.html" var:title="Изчисляване на възрастта в кучешки години"></include>
+<include what="@@layout/header.html" var:title="Калкулатор: Колко са кучешките години на Вашето куче? Точна Таблица от Ветеринар"
+var:meta_desc="Искате да знаете реалната възраст на кучето си? Използвайте нашия точен калкулатор, базирана на ветеринарни изследвания, за бързо пресмятане на кучешките години."></include>
+</include>
 <include what="@@layout/menu.html">
     <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
     <span class="breadcrumb-link">  &#x27A4;  </span>
@@ -32,7 +34,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Изчисляване на възрастта в "кучешки" години</h1>
+                    <h1>Калкулатор: Колко са кучешките години на Вашето куче? Точна Таблица от Ветеринар</h1>
                     <p>
                         Разпространена заблуда е че една човешка година се равнява на седем кучешки години.
                         <br>
