--- a/growth-cat-pet-years.html
+++ b/growth-cat-pet-years.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="CUyrudPG3hhNckXtwoLpTaaPyyLRSI3Be_YnANvpNxE">
-    <title>Муцуна | Изчисляване на възрастта в котешки години</title>
+    <title>Муцуна | Калкулатор: Колко са котешките години на Вашата котка? Точна Таблица от Ветеринар</title>
 
     <meta name="description" content="Искате да знаете реалната възраст на котката си? Използвайте нашия точен калкулатор, базирана на ветеринарни изследвания, за бързо пресмятане на котешките години.">
     
