--- a/growth-dog-pet-years.html
+++ b/growth-dog-pet-years.html
@@ -2,9 +2,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="CUyrudPG3hhNckXtwoLpTaaPyyLRSI3Be_YnANvpNxE">
-    <title>Муцуна | Изчисляване на възрастта в кучешки години</title>
+    <title>Муцуна | Калкулатор: Колко са кучешките години на Вашето куче? Точна Таблица от Ветеринар</title>
 
-    <meta name="description" content="{{{meta_desc}}}">
+    <meta name="description" content="Искате да знаете реалната възраст на кучето си? Използвайте нашия точен калкулатор, базирана на ветеринарни изследвания, за бързо пресмятане на кучешките години.">
     
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./calculator-compare-foods.css">
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+
 
 <header class="header-section">
     <div id="header-container">
@@ -722,7 +723,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Изчисляване на възрастта в "кучешки" години</h1>
+                    <h1>Калкулатор: Колко са кучешките години на Вашето куче? Точна Таблица от Ветеринар</h1>
                     <p>
                         Разпространена заблуда е че една човешка година се равнява на седем кучешки години.
                         <br>
