--- a/src/diseases/infectious/feline-panleukopenia.html
+++ b/src/diseases/infectious/feline-panleukopenia.html
@@ -1,7 +1,7 @@
 <!-- HEADER -->
 <include what="@@layout/header.html" 
-         var:title="Панлевкопения при котките: Експертен Съвет от Ветеринар" 
-         var:meta_desc="Загрижени сте за котката си? Научете какво представлява панлевкопенията, как се лекува (флуди, серуми, хранителна подкрепа) и кои са критичните симптоми, които трябва да разпознаете веднага. Пълно ръководство от дипломиран ветеринарен лекар.">
+         var:title="Панлевкопения при котките: Симптоми, Лечение и Експертен съвет от ветеринар" 
+         var:meta_desc="🔴 СПЕШНО! Научете как да разпознаете симптомите, какво е модерното лечение (серуми/имуностимулатори) и как да спасите котката си. Пълно ръководство от дипломиран ветеринар.">
 </include>
 <include what="@@layout/menu.html"></include>
 
@@ -17,7 +17,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Панлевкопения при котките: Симптоми, Лечение и Предотвратяване. Експертен Съвет от Ветеринар.</h1>
+                    <h1>Панлевкопения при котките: Симптоми, Лечение и Експертен съвет от ветеринар</h1>
                     <h2>Какво е панлевкопения и какво я причинява?</h2>
                     <p>Панлевкопенията е заболяване по котките, което се причинява от вирус, нар. Feline Panleukopenia
                         Virus (FPV). Вирусът атакува червата и костния мозък. Вирусът е изключително устойчив и може да
@@ -219,6 +219,19 @@
                         хигиена са най-добрите начини за предотвратяване на заболяването. Навременното лечение
                         значително подобрява шансовете за оцеляване.</p>
 
+                    <h2>Често задавани въпроси:</h2>
+                    <h3>Какви са шансовете за оцеляване при панлевкопения?</h3>
+                    <p>Шансовете за оцеляване зависят критично от <strong>възрастта</strong> на котката и <strong>навременното започване</strong> на лечението. При котенца под 8-седмична възраст смъртността е много висока (често над 90%). При по-големи котки, които са получили незабавна и интензивна поддържаща терапия (флуиди, антибиотици, хранителна подкрепа), шансовете за оцеляване значително се повишават.</p>
+                    <p><strong>Колкото по-рано започне лечението, толкова по-добри са шансовете за оцеляване.</strong></p>
+                    <p>Ако котката преживее първите 4-5 дни от критичната фаза, прогнозата става много по-добра.</p>
+
+                    <h3>Колко време отнема лечението?</h3>
+                    <p>Критичната фаза на заболяването обикновено трае <strong>5 до 7 дни</strong>. Лечението в този период е интензивно и често изисква хоспитализация с денонощни грижи.</p>
+                    <p>Пълното възстановяване, което включва възстановяване на чревната лигавица и нормализиране на броя на белите кръвни клетки, може да отнеме <strong>няколко седмици</strong>. Ваксинация срещу панлевкопения може да бъде поставена 4 седмици след възстановяването (след консултация с ветеринар).</p>
+
+                    <h3>След като котката ми се излекува от панлевкопения, трябва ли да я ваксинирам?</h3>
+                    <p><strong>Не е необходимо да се ваксинира срещу панлевкопения</strong>. Котката, която успешно се е излекувала от FPV, развива силен, дълготраен имунитет срещу вируса.</p>
+                    <p>Въпреки това, тя трябва да продължи да получава ваксини срещу други основни заболявания (напр. ринотрахеит и калицивироза), ако не са били поставени преди заболяването.</p>
                     <br>
                     <div class="other-article">
                         <a href="./diseases-infectious-rabies.html">
