Panleukopenia revision 2, forgot build js

--- a/src/diseases/infectious/feline-panleukopenia.html
+++ b/src/diseases/infectious/feline-panleukopenia.html
@@ -191,8 +191,7 @@
                         котка:</p>
                     <ol>
                         <li><strong>Ваксинация</strong>: Най-ефективният начин за предотвратяване на панлевкопения.
-                            Котенцата трябва да получат първата си ваксина на 8-9 седмици, последвана от бустер доза
-                            след 3-4 седмици. Възрастните котки изискват ежегодни ваксинации.</li>
+                            Котенцата трябва да получат първата си ваксина на 8-9 седмици, последвана от бустер доза след 3-4 седмици. Възрастните котки изискват ежегодни ваксинации.</li>
                         <li><strong>Избягване на рискови места</strong>: Докато Вашето коте не е напълно ваксинирано,
                             избягвайте да допускате любимеца си навън.</li>
                         <li><strong>Контролиране на социализацията</strong>: Позволявайте на Вашата котка да контактува
