Anatomy dog New skeletal Scheme

--- a/src/what-for-you/dog/anatomy.html
+++ b/src/what-for-you/dog/anatomy.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Анатомия на кучето"></include>
+<include what="@@layout/header.html" var:title="Кратка и прецизна анатомия на кучето"></include>
 <include what="@@layout/menu.html">
     <a class="breadcrumb-link no-dec" href="./index.html">Начало</a>
     <span class="breadcrumb-link">  &#x27A4;  </span>
@@ -23,7 +23,13 @@
                     
                     <div id="articleContent">  
                         <div id="article-content--dogs">
-                            <h1>Каква е анатомията на кучето?</h1>
+                            <h1>Кратка и прецизна анатомия на кучето</h1>
+
+                            <div class="img-holder">
+                                <img src="./img/what-for-you/dog-anatomy.png">
+                                <p>Прецизна анатомична схема на скелета на кучето.</p>
+                            </div>
+
                             <p>Породите кучета са многобройни и силно вариращи по размер, сила и характер. Въпреки това, всички кучета споделят ключови анатомични особености. В тази статия ще разгледаме анатомията на кучетата и ще придобием представа за тяхната природа.</p>
                             <br>
                             <ol start="1" type="1">
