--- a/what-for-you-dog-anatomy.html
+++ b/what-for-you-dog-anatomy.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="CUyrudPG3hhNckXtwoLpTaaPyyLRSI3Be_YnANvpNxE">
-    <title>Муцуна | Анатомия на кучето</title>
+    <title>Муцуна | Кратка и прецизна анатомия на кучето</title>
 
     <meta name="description" content="{{{meta_desc}}}">
     
@@ -714,7 +714,13 @@
                     
                     <div id="articleContent">  
                         <div id="article-content--dogs">
-                            <h1>Каква е анатомията на кучето?</h1>
+                            <h1>Кратка и прецизна анатомия на кучето</h1>
+
+                            <div class="img-holder">
+                                <img src="./img/what-for-you/dog-anatomy.png">
+                                <p>Прецизна анатомична схема на скелета на кучето.</p>
+                            </div>
+
                             <p>Породите кучета са многобройни и силно вариращи по размер, сила и характер. Въпреки това, всички кучета споделят ключови анатомични особености. В тази статия ще разгледаме анатомията на кучетата и ще придобием представа за тяхната природа.</p>
                             <br>
                             <ol start="1" type="1">
